src/g3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CATCH
    CLASS
    COLON
    DEBUG
    DO
    DOT
    END
    FLOAT
    FOR
    GLOBAL
    IN
    LBB
    LIST
    PYTHON
    RBB
    REPEAT
    TRY
    USE

Grammar

Rule 0     S' -> program
Rule 1     program -> root
Rule 2     root -> root statement
Rule 3     root -> statement
Rule 4     statement -> if_statement
Rule 5     statement -> while_statement
Rule 6     statement -> variable_declaration SEMI
Rule 7     statement -> variable_value_change SEMI
Rule 8     statement -> function_declaration
Rule 9     statement -> PASS SEMI
Rule 10    statement -> empty
Rule 11    statement -> expression SEMI
Rule 12    expression -> calculate
Rule 13    expression -> string_calculate
Rule 14    expression -> compare_expression
Rule 15    expression -> function_call
Rule 16    variable_declaration -> VAR IDENTIFIER EQUAL expression
Rule 17    variable_value_change -> IDENTIFIER EQUAL expression
Rule 18    function_call -> IDENTIFIER LSB function_call_parameter RSB
Rule 19    function_call_parameter -> function_call_parameter COMMA calculate
Rule 20    function_call_parameter -> calculate
Rule 21    function_call_parameter -> empty
Rule 22    function_declaration -> FUNCTION IDENTIFIER LSB function_parameter RSB LMB root RMB
Rule 23    function_parameter -> function_parameter COMMA IDENTIFIER
Rule 24    function_parameter -> IDENTIFIER
Rule 25    function_parameter -> empty
Rule 26    while_statement -> WHILE LSB compare_expression RSB LMB root RMB
Rule 27    if_statement -> IF LSB expression RSB LMB root RMB
Rule 28    if_statement -> if_statement ELSE IF LSB expression RSB LMB root RMB
Rule 29    if_statement -> if_statement ELSE LMB root RMB
Rule 30    compare_expression -> compare_expression compare_operator calculate
Rule 31    compare_expression -> calculate
Rule 32    compare_operator -> LB
Rule 33    compare_operator -> RB
Rule 34    compare_operator -> LB EQUAL
Rule 35    compare_operator -> RB EQUAL
Rule 36    compare_operator -> EQUAL EQUAL
Rule 37    compare_operator -> NOTEQUAL EQUAL
Rule 38    string_calculate -> string_calculate stringoperator STRING
Rule 39    string_calculate -> STRING
Rule 40    stringoperator -> PLUS
Rule 41    calculate -> calculate PLUS calculate
Rule 42    calculate -> calculate MINUS calculate
Rule 43    calculate -> calculate MUL calculate
Rule 44    calculate -> calculate DIV calculate
Rule 45    calculate -> MINUS calculate
Rule 46    calculate -> LSB calculate RSB
Rule 47    calculate -> INT
Rule 48    calculate -> IDENTIFIER
Rule 49    empty -> <empty>

Terminals, with rules where they appear

CATCH                : 
CLASS                : 
COLON                : 
COMMA                : 19 23
DEBUG                : 
DIV                  : 44
DO                   : 
DOT                  : 
ELSE                 : 28 29
END                  : 
EQUAL                : 16 17 34 35 36 36 37
FLOAT                : 
FOR                  : 
FUNCTION             : 22
GLOBAL               : 
IDENTIFIER           : 16 17 18 22 23 24 48
IF                   : 27 28
IN                   : 
INT                  : 47
LB                   : 32 34
LBB                  : 
LIST                 : 
LMB                  : 22 26 27 28 29
LSB                  : 18 22 26 27 28 46
MINUS                : 42 45
MUL                  : 43
NOTEQUAL             : 37
PASS                 : 9
PLUS                 : 40 41
PYTHON               : 
RB                   : 33 35
RBB                  : 
REPEAT               : 
RMB                  : 22 26 27 28 29
RSB                  : 18 22 26 27 28 46
SEMI                 : 6 7 9 11
STRING               : 38 39
TRY                  : 
USE                  : 
VAR                  : 16
WHILE                : 26
error                : 

Nonterminals, with rules where they appear

calculate            : 12 19 20 30 31 41 41 42 42 43 43 44 44 45 46
compare_expression   : 14 26 30
compare_operator     : 30
empty                : 10 21 25
expression           : 11 16 17 27 28
function_call        : 15
function_call_parameter : 18 19
function_declaration : 8
function_parameter   : 22 23
if_statement         : 4 28 29
program              : 0
root                 : 1 2 22 26 27 28 29
statement            : 2 3
string_calculate     : 13 38
stringoperator       : 38
variable_declaration : 6
variable_value_change : 7
while_statement      : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . root
    (2) root -> . root statement
    (3) root -> . statement
    (4) statement -> . if_statement
    (5) statement -> . while_statement
    (6) statement -> . variable_declaration SEMI
    (7) statement -> . variable_value_change SEMI
    (8) statement -> . function_declaration
    (9) statement -> . PASS SEMI
    (10) statement -> . empty
    (11) statement -> . expression SEMI
    (27) if_statement -> . IF LSB expression RSB LMB root RMB
    (28) if_statement -> . if_statement ELSE IF LSB expression RSB LMB root RMB
    (29) if_statement -> . if_statement ELSE LMB root RMB
    (26) while_statement -> . WHILE LSB compare_expression RSB LMB root RMB
    (16) variable_declaration -> . VAR IDENTIFIER EQUAL expression
    (17) variable_value_change -> . IDENTIFIER EQUAL expression
    (22) function_declaration -> . FUNCTION IDENTIFIER LSB function_parameter RSB LMB root RMB
    (49) empty -> .
    (12) expression -> . calculate
    (13) expression -> . string_calculate
    (14) expression -> . compare_expression
    (15) expression -> . function_call
    (41) calculate -> . calculate PLUS calculate
    (42) calculate -> . calculate MINUS calculate
    (43) calculate -> . calculate MUL calculate
    (44) calculate -> . calculate DIV calculate
    (45) calculate -> . MINUS calculate
    (46) calculate -> . LSB calculate RSB
    (47) calculate -> . INT
    (48) calculate -> . IDENTIFIER
    (38) string_calculate -> . string_calculate stringoperator STRING
    (39) string_calculate -> . STRING
    (30) compare_expression -> . compare_expression compare_operator calculate
    (31) compare_expression -> . calculate
    (18) function_call -> . IDENTIFIER LSB function_call_parameter RSB

  ! shift/reduce conflict for PASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LSB resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    PASS            shift and go to state 9
    IF              shift and go to state 12
    WHILE           shift and go to state 14
    VAR             shift and go to state 16
    IDENTIFIER      shift and go to state 17
    FUNCTION        shift and go to state 18
    $end            reduce using rule 49 (empty -> .)
    MINUS           shift and go to state 22
    LSB             shift and go to state 13
    INT             shift and go to state 23
    STRING          shift and go to state 24

  ! PASS            [ reduce using rule 49 (empty -> .) ]
  ! IF              [ reduce using rule 49 (empty -> .) ]
  ! WHILE           [ reduce using rule 49 (empty -> .) ]
  ! VAR             [ reduce using rule 49 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 49 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 49 (empty -> .) ]
  ! MINUS           [ reduce using rule 49 (empty -> .) ]
  ! LSB             [ reduce using rule 49 (empty -> .) ]
  ! INT             [ reduce using rule 49 (empty -> .) ]
  ! STRING          [ reduce using rule 49 (empty -> .) ]

    program                        shift and go to state 1
    root                           shift and go to state 2
    statement                      shift and go to state 3
    if_statement                   shift and go to state 4
    while_statement                shift and go to state 5
    variable_declaration           shift and go to state 6
    variable_value_change          shift and go to state 7
    function_declaration           shift and go to state 8
    empty                          shift and go to state 10
    expression                     shift and go to state 11
    compare_expression             shift and go to state 15
    calculate                      shift and go to state 19
    string_calculate               shift and go to state 20
    function_call                  shift and go to state 21

state 1

    (0) S' -> program .



state 2

    (1) program -> root .
    (2) root -> root . statement
    (4) statement -> . if_statement
    (5) statement -> . while_statement
    (6) statement -> . variable_declaration SEMI
    (7) statement -> . variable_value_change SEMI
    (8) statement -> . function_declaration
    (9) statement -> . PASS SEMI
    (10) statement -> . empty
    (11) statement -> . expression SEMI
    (27) if_statement -> . IF LSB expression RSB LMB root RMB
    (28) if_statement -> . if_statement ELSE IF LSB expression RSB LMB root RMB
    (29) if_statement -> . if_statement ELSE LMB root RMB
    (26) while_statement -> . WHILE LSB compare_expression RSB LMB root RMB
    (16) variable_declaration -> . VAR IDENTIFIER EQUAL expression
    (17) variable_value_change -> . IDENTIFIER EQUAL expression
    (22) function_declaration -> . FUNCTION IDENTIFIER LSB function_parameter RSB LMB root RMB
    (49) empty -> .
    (12) expression -> . calculate
    (13) expression -> . string_calculate
    (14) expression -> . compare_expression
    (15) expression -> . function_call
    (41) calculate -> . calculate PLUS calculate
    (42) calculate -> . calculate MINUS calculate
    (43) calculate -> . calculate MUL calculate
    (44) calculate -> . calculate DIV calculate
    (45) calculate -> . MINUS calculate
    (46) calculate -> . LSB calculate RSB
    (47) calculate -> . INT
    (48) calculate -> . IDENTIFIER
    (38) string_calculate -> . string_calculate stringoperator STRING
    (39) string_calculate -> . STRING
    (30) compare_expression -> . compare_expression compare_operator calculate
    (31) compare_expression -> . calculate
    (18) function_call -> . IDENTIFIER LSB function_call_parameter RSB

  ! shift/reduce conflict for PASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (program -> root .)
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LSB resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    $end            reduce using rule 1 (program -> root .)
    PASS            shift and go to state 9
    IF              shift and go to state 12
    WHILE           shift and go to state 14
    VAR             shift and go to state 16
    IDENTIFIER      shift and go to state 17
    FUNCTION        shift and go to state 18
    MINUS           shift and go to state 22
    LSB             shift and go to state 13
    INT             shift and go to state 23
    STRING          shift and go to state 24

  ! PASS            [ reduce using rule 49 (empty -> .) ]
  ! IF              [ reduce using rule 49 (empty -> .) ]
  ! WHILE           [ reduce using rule 49 (empty -> .) ]
  ! VAR             [ reduce using rule 49 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 49 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 49 (empty -> .) ]
  ! MINUS           [ reduce using rule 49 (empty -> .) ]
  ! LSB             [ reduce using rule 49 (empty -> .) ]
  ! INT             [ reduce using rule 49 (empty -> .) ]
  ! STRING          [ reduce using rule 49 (empty -> .) ]
  ! $end            [ reduce using rule 49 (empty -> .) ]

    statement                      shift and go to state 25
    if_statement                   shift and go to state 4
    while_statement                shift and go to state 5
    variable_declaration           shift and go to state 6
    variable_value_change          shift and go to state 7
    function_declaration           shift and go to state 8
    empty                          shift and go to state 10
    expression                     shift and go to state 11
    compare_expression             shift and go to state 15
    calculate                      shift and go to state 19
    string_calculate               shift and go to state 20
    function_call                  shift and go to state 21

state 3

    (3) root -> statement .

    PASS            reduce using rule 3 (root -> statement .)
    IF              reduce using rule 3 (root -> statement .)
    WHILE           reduce using rule 3 (root -> statement .)
    VAR             reduce using rule 3 (root -> statement .)
    IDENTIFIER      reduce using rule 3 (root -> statement .)
    FUNCTION        reduce using rule 3 (root -> statement .)
    MINUS           reduce using rule 3 (root -> statement .)
    LSB             reduce using rule 3 (root -> statement .)
    INT             reduce using rule 3 (root -> statement .)
    STRING          reduce using rule 3 (root -> statement .)
    $end            reduce using rule 3 (root -> statement .)
    RMB             reduce using rule 3 (root -> statement .)


state 4

    (4) statement -> if_statement .
    (28) if_statement -> if_statement . ELSE IF LSB expression RSB LMB root RMB
    (29) if_statement -> if_statement . ELSE LMB root RMB

    PASS            reduce using rule 4 (statement -> if_statement .)
    IF              reduce using rule 4 (statement -> if_statement .)
    WHILE           reduce using rule 4 (statement -> if_statement .)
    VAR             reduce using rule 4 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 4 (statement -> if_statement .)
    FUNCTION        reduce using rule 4 (statement -> if_statement .)
    MINUS           reduce using rule 4 (statement -> if_statement .)
    LSB             reduce using rule 4 (statement -> if_statement .)
    INT             reduce using rule 4 (statement -> if_statement .)
    STRING          reduce using rule 4 (statement -> if_statement .)
    $end            reduce using rule 4 (statement -> if_statement .)
    RMB             reduce using rule 4 (statement -> if_statement .)
    ELSE            shift and go to state 26


state 5

    (5) statement -> while_statement .

    PASS            reduce using rule 5 (statement -> while_statement .)
    IF              reduce using rule 5 (statement -> while_statement .)
    WHILE           reduce using rule 5 (statement -> while_statement .)
    VAR             reduce using rule 5 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 5 (statement -> while_statement .)
    FUNCTION        reduce using rule 5 (statement -> while_statement .)
    MINUS           reduce using rule 5 (statement -> while_statement .)
    LSB             reduce using rule 5 (statement -> while_statement .)
    INT             reduce using rule 5 (statement -> while_statement .)
    STRING          reduce using rule 5 (statement -> while_statement .)
    $end            reduce using rule 5 (statement -> while_statement .)
    RMB             reduce using rule 5 (statement -> while_statement .)


state 6

    (6) statement -> variable_declaration . SEMI

    SEMI            shift and go to state 27


state 7

    (7) statement -> variable_value_change . SEMI

    SEMI            shift and go to state 28


state 8

    (8) statement -> function_declaration .

    PASS            reduce using rule 8 (statement -> function_declaration .)
    IF              reduce using rule 8 (statement -> function_declaration .)
    WHILE           reduce using rule 8 (statement -> function_declaration .)
    VAR             reduce using rule 8 (statement -> function_declaration .)
    IDENTIFIER      reduce using rule 8 (statement -> function_declaration .)
    FUNCTION        reduce using rule 8 (statement -> function_declaration .)
    MINUS           reduce using rule 8 (statement -> function_declaration .)
    LSB             reduce using rule 8 (statement -> function_declaration .)
    INT             reduce using rule 8 (statement -> function_declaration .)
    STRING          reduce using rule 8 (statement -> function_declaration .)
    $end            reduce using rule 8 (statement -> function_declaration .)
    RMB             reduce using rule 8 (statement -> function_declaration .)


state 9

    (9) statement -> PASS . SEMI

    SEMI            shift and go to state 29


state 10

    (10) statement -> empty .

    PASS            reduce using rule 10 (statement -> empty .)
    IF              reduce using rule 10 (statement -> empty .)
    WHILE           reduce using rule 10 (statement -> empty .)
    VAR             reduce using rule 10 (statement -> empty .)
    IDENTIFIER      reduce using rule 10 (statement -> empty .)
    FUNCTION        reduce using rule 10 (statement -> empty .)
    MINUS           reduce using rule 10 (statement -> empty .)
    LSB             reduce using rule 10 (statement -> empty .)
    INT             reduce using rule 10 (statement -> empty .)
    STRING          reduce using rule 10 (statement -> empty .)
    $end            reduce using rule 10 (statement -> empty .)
    RMB             reduce using rule 10 (statement -> empty .)


state 11

    (11) statement -> expression . SEMI

    SEMI            shift and go to state 30


state 12

    (27) if_statement -> IF . LSB expression RSB LMB root RMB

    LSB             shift and go to state 31


state 13

    (46) calculate -> LSB . calculate RSB
    (41) calculate -> . calculate PLUS calculate
    (42) calculate -> . calculate MINUS calculate
    (43) calculate -> . calculate MUL calculate
    (44) calculate -> . calculate DIV calculate
    (45) calculate -> . MINUS calculate
    (46) calculate -> . LSB calculate RSB
    (47) calculate -> . INT
    (48) calculate -> . IDENTIFIER

    MINUS           shift and go to state 22
    LSB             shift and go to state 13
    INT             shift and go to state 23
    IDENTIFIER      shift and go to state 33

    calculate                      shift and go to state 32

state 14

    (26) while_statement -> WHILE . LSB compare_expression RSB LMB root RMB

    LSB             shift and go to state 34


state 15

    (14) expression -> compare_expression .
    (30) compare_expression -> compare_expression . compare_operator calculate
    (32) compare_operator -> . LB
    (33) compare_operator -> . RB
    (34) compare_operator -> . LB EQUAL
    (35) compare_operator -> . RB EQUAL
    (36) compare_operator -> . EQUAL EQUAL
    (37) compare_operator -> . NOTEQUAL EQUAL

    SEMI            reduce using rule 14 (expression -> compare_expression .)
    RSB             reduce using rule 14 (expression -> compare_expression .)
    LB              shift and go to state 36
    RB              shift and go to state 37
    EQUAL           shift and go to state 38
    NOTEQUAL        shift and go to state 39

    compare_operator               shift and go to state 35

state 16

    (16) variable_declaration -> VAR . IDENTIFIER EQUAL expression

    IDENTIFIER      shift and go to state 40


state 17

    (17) variable_value_change -> IDENTIFIER . EQUAL expression
    (48) calculate -> IDENTIFIER .
    (18) function_call -> IDENTIFIER . LSB function_call_parameter RSB

  ! shift/reduce conflict for EQUAL resolved as shift
    EQUAL           shift and go to state 41
    PLUS            reduce using rule 48 (calculate -> IDENTIFIER .)
    MINUS           reduce using rule 48 (calculate -> IDENTIFIER .)
    MUL             reduce using rule 48 (calculate -> IDENTIFIER .)
    DIV             reduce using rule 48 (calculate -> IDENTIFIER .)
    SEMI            reduce using rule 48 (calculate -> IDENTIFIER .)
    LB              reduce using rule 48 (calculate -> IDENTIFIER .)
    RB              reduce using rule 48 (calculate -> IDENTIFIER .)
    NOTEQUAL        reduce using rule 48 (calculate -> IDENTIFIER .)
    LSB             shift and go to state 42

  ! EQUAL           [ reduce using rule 48 (calculate -> IDENTIFIER .) ]


state 18

    (22) function_declaration -> FUNCTION . IDENTIFIER LSB function_parameter RSB LMB root RMB

    IDENTIFIER      shift and go to state 43


state 19

    (12) expression -> calculate .
    (41) calculate -> calculate . PLUS calculate
    (42) calculate -> calculate . MINUS calculate
    (43) calculate -> calculate . MUL calculate
    (44) calculate -> calculate . DIV calculate
    (31) compare_expression -> calculate .

  ! reduce/reduce conflict for SEMI resolved using rule 12 (expression -> calculate .)
  ! reduce/reduce conflict for RSB resolved using rule 12 (expression -> calculate .)
    SEMI            reduce using rule 12 (expression -> calculate .)
    RSB             reduce using rule 12 (expression -> calculate .)
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    MUL             shift and go to state 46
    DIV             shift and go to state 47
    LB              reduce using rule 31 (compare_expression -> calculate .)
    RB              reduce using rule 31 (compare_expression -> calculate .)
    EQUAL           reduce using rule 31 (compare_expression -> calculate .)
    NOTEQUAL        reduce using rule 31 (compare_expression -> calculate .)

  ! SEMI            [ reduce using rule 31 (compare_expression -> calculate .) ]
  ! RSB             [ reduce using rule 31 (compare_expression -> calculate .) ]


state 20

    (13) expression -> string_calculate .
    (38) string_calculate -> string_calculate . stringoperator STRING
    (40) stringoperator -> . PLUS

    SEMI            reduce using rule 13 (expression -> string_calculate .)
    RSB             reduce using rule 13 (expression -> string_calculate .)
    PLUS            shift and go to state 49

    stringoperator                 shift and go to state 48

state 21

    (15) expression -> function_call .

    SEMI            reduce using rule 15 (expression -> function_call .)
    RSB             reduce using rule 15 (expression -> function_call .)


state 22

    (45) calculate -> MINUS . calculate
    (41) calculate -> . calculate PLUS calculate
    (42) calculate -> . calculate MINUS calculate
    (43) calculate -> . calculate MUL calculate
    (44) calculate -> . calculate DIV calculate
    (45) calculate -> . MINUS calculate
    (46) calculate -> . LSB calculate RSB
    (47) calculate -> . INT
    (48) calculate -> . IDENTIFIER

    MINUS           shift and go to state 22
    LSB             shift and go to state 13
    INT             shift and go to state 23
    IDENTIFIER      shift and go to state 33

    calculate                      shift and go to state 50

state 23

    (47) calculate -> INT .

    PLUS            reduce using rule 47 (calculate -> INT .)
    MINUS           reduce using rule 47 (calculate -> INT .)
    MUL             reduce using rule 47 (calculate -> INT .)
    DIV             reduce using rule 47 (calculate -> INT .)
    SEMI            reduce using rule 47 (calculate -> INT .)
    LB              reduce using rule 47 (calculate -> INT .)
    RB              reduce using rule 47 (calculate -> INT .)
    EQUAL           reduce using rule 47 (calculate -> INT .)
    NOTEQUAL        reduce using rule 47 (calculate -> INT .)
    RSB             reduce using rule 47 (calculate -> INT .)
    COMMA           reduce using rule 47 (calculate -> INT .)


state 24

    (39) string_calculate -> STRING .

    PLUS            reduce using rule 39 (string_calculate -> STRING .)
    SEMI            reduce using rule 39 (string_calculate -> STRING .)
    RSB             reduce using rule 39 (string_calculate -> STRING .)


state 25

    (2) root -> root statement .

    PASS            reduce using rule 2 (root -> root statement .)
    IF              reduce using rule 2 (root -> root statement .)
    WHILE           reduce using rule 2 (root -> root statement .)
    VAR             reduce using rule 2 (root -> root statement .)
    IDENTIFIER      reduce using rule 2 (root -> root statement .)
    FUNCTION        reduce using rule 2 (root -> root statement .)
    MINUS           reduce using rule 2 (root -> root statement .)
    LSB             reduce using rule 2 (root -> root statement .)
    INT             reduce using rule 2 (root -> root statement .)
    STRING          reduce using rule 2 (root -> root statement .)
    $end            reduce using rule 2 (root -> root statement .)
    RMB             reduce using rule 2 (root -> root statement .)


state 26

    (28) if_statement -> if_statement ELSE . IF LSB expression RSB LMB root RMB
    (29) if_statement -> if_statement ELSE . LMB root RMB

    IF              shift and go to state 51
    LMB             shift and go to state 52


state 27

    (6) statement -> variable_declaration SEMI .

    PASS            reduce using rule 6 (statement -> variable_declaration SEMI .)
    IF              reduce using rule 6 (statement -> variable_declaration SEMI .)
    WHILE           reduce using rule 6 (statement -> variable_declaration SEMI .)
    VAR             reduce using rule 6 (statement -> variable_declaration SEMI .)
    IDENTIFIER      reduce using rule 6 (statement -> variable_declaration SEMI .)
    FUNCTION        reduce using rule 6 (statement -> variable_declaration SEMI .)
    MINUS           reduce using rule 6 (statement -> variable_declaration SEMI .)
    LSB             reduce using rule 6 (statement -> variable_declaration SEMI .)
    INT             reduce using rule 6 (statement -> variable_declaration SEMI .)
    STRING          reduce using rule 6 (statement -> variable_declaration SEMI .)
    $end            reduce using rule 6 (statement -> variable_declaration SEMI .)
    RMB             reduce using rule 6 (statement -> variable_declaration SEMI .)


state 28

    (7) statement -> variable_value_change SEMI .

    PASS            reduce using rule 7 (statement -> variable_value_change SEMI .)
    IF              reduce using rule 7 (statement -> variable_value_change SEMI .)
    WHILE           reduce using rule 7 (statement -> variable_value_change SEMI .)
    VAR             reduce using rule 7 (statement -> variable_value_change SEMI .)
    IDENTIFIER      reduce using rule 7 (statement -> variable_value_change SEMI .)
    FUNCTION        reduce using rule 7 (statement -> variable_value_change SEMI .)
    MINUS           reduce using rule 7 (statement -> variable_value_change SEMI .)
    LSB             reduce using rule 7 (statement -> variable_value_change SEMI .)
    INT             reduce using rule 7 (statement -> variable_value_change SEMI .)
    STRING          reduce using rule 7 (statement -> variable_value_change SEMI .)
    $end            reduce using rule 7 (statement -> variable_value_change SEMI .)
    RMB             reduce using rule 7 (statement -> variable_value_change SEMI .)


state 29

    (9) statement -> PASS SEMI .

    PASS            reduce using rule 9 (statement -> PASS SEMI .)
    IF              reduce using rule 9 (statement -> PASS SEMI .)
    WHILE           reduce using rule 9 (statement -> PASS SEMI .)
    VAR             reduce using rule 9 (statement -> PASS SEMI .)
    IDENTIFIER      reduce using rule 9 (statement -> PASS SEMI .)
    FUNCTION        reduce using rule 9 (statement -> PASS SEMI .)
    MINUS           reduce using rule 9 (statement -> PASS SEMI .)
    LSB             reduce using rule 9 (statement -> PASS SEMI .)
    INT             reduce using rule 9 (statement -> PASS SEMI .)
    STRING          reduce using rule 9 (statement -> PASS SEMI .)
    $end            reduce using rule 9 (statement -> PASS SEMI .)
    RMB             reduce using rule 9 (statement -> PASS SEMI .)


state 30

    (11) statement -> expression SEMI .

    PASS            reduce using rule 11 (statement -> expression SEMI .)
    IF              reduce using rule 11 (statement -> expression SEMI .)
    WHILE           reduce using rule 11 (statement -> expression SEMI .)
    VAR             reduce using rule 11 (statement -> expression SEMI .)
    IDENTIFIER      reduce using rule 11 (statement -> expression SEMI .)
    FUNCTION        reduce using rule 11 (statement -> expression SEMI .)
    MINUS           reduce using rule 11 (statement -> expression SEMI .)
    LSB             reduce using rule 11 (statement -> expression SEMI .)
    INT             reduce using rule 11 (statement -> expression SEMI .)
    STRING          reduce using rule 11 (statement -> expression SEMI .)
    $end            reduce using rule 11 (statement -> expression SEMI .)
    RMB             reduce using rule 11 (statement -> expression SEMI .)


state 31

    (27) if_statement -> IF LSB . expression RSB LMB root RMB
    (12) expression -> . calculate
    (13) expression -> . string_calculate
    (14) expression -> . compare_expression
    (15) expression -> . function_call
    (41) calculate -> . calculate PLUS calculate
    (42) calculate -> . calculate MINUS calculate
    (43) calculate -> . calculate MUL calculate
    (44) calculate -> . calculate DIV calculate
    (45) calculate -> . MINUS calculate
    (46) calculate -> . LSB calculate RSB
    (47) calculate -> . INT
    (48) calculate -> . IDENTIFIER
    (38) string_calculate -> . string_calculate stringoperator STRING
    (39) string_calculate -> . STRING
    (30) compare_expression -> . compare_expression compare_operator calculate
    (31) compare_expression -> . calculate
    (18) function_call -> . IDENTIFIER LSB function_call_parameter RSB

    MINUS           shift and go to state 22
    LSB             shift and go to state 13
    INT             shift and go to state 23
    IDENTIFIER      shift and go to state 54
    STRING          shift and go to state 24

    expression                     shift and go to state 53
    calculate                      shift and go to state 19
    string_calculate               shift and go to state 20
    compare_expression             shift and go to state 15
    function_call                  shift and go to state 21

state 32

    (46) calculate -> LSB calculate . RSB
    (41) calculate -> calculate . PLUS calculate
    (42) calculate -> calculate . MINUS calculate
    (43) calculate -> calculate . MUL calculate
    (44) calculate -> calculate . DIV calculate

    RSB             shift and go to state 55
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    MUL             shift and go to state 46
    DIV             shift and go to state 47


state 33

    (48) calculate -> IDENTIFIER .

    RSB             reduce using rule 48 (calculate -> IDENTIFIER .)
    PLUS            reduce using rule 48 (calculate -> IDENTIFIER .)
    MINUS           reduce using rule 48 (calculate -> IDENTIFIER .)
    MUL             reduce using rule 48 (calculate -> IDENTIFIER .)
    DIV             reduce using rule 48 (calculate -> IDENTIFIER .)
    SEMI            reduce using rule 48 (calculate -> IDENTIFIER .)
    LB              reduce using rule 48 (calculate -> IDENTIFIER .)
    RB              reduce using rule 48 (calculate -> IDENTIFIER .)
    EQUAL           reduce using rule 48 (calculate -> IDENTIFIER .)
    NOTEQUAL        reduce using rule 48 (calculate -> IDENTIFIER .)
    COMMA           reduce using rule 48 (calculate -> IDENTIFIER .)


state 34

    (26) while_statement -> WHILE LSB . compare_expression RSB LMB root RMB
    (30) compare_expression -> . compare_expression compare_operator calculate
    (31) compare_expression -> . calculate
    (41) calculate -> . calculate PLUS calculate
    (42) calculate -> . calculate MINUS calculate
    (43) calculate -> . calculate MUL calculate
    (44) calculate -> . calculate DIV calculate
    (45) calculate -> . MINUS calculate
    (46) calculate -> . LSB calculate RSB
    (47) calculate -> . INT
    (48) calculate -> . IDENTIFIER

    MINUS           shift and go to state 22
    LSB             shift and go to state 13
    INT             shift and go to state 23
    IDENTIFIER      shift and go to state 33

    compare_expression             shift and go to state 56
    calculate                      shift and go to state 57

state 35

    (30) compare_expression -> compare_expression compare_operator . calculate
    (41) calculate -> . calculate PLUS calculate
    (42) calculate -> . calculate MINUS calculate
    (43) calculate -> . calculate MUL calculate
    (44) calculate -> . calculate DIV calculate
    (45) calculate -> . MINUS calculate
    (46) calculate -> . LSB calculate RSB
    (47) calculate -> . INT
    (48) calculate -> . IDENTIFIER

    MINUS           shift and go to state 22
    LSB             shift and go to state 13
    INT             shift and go to state 23
    IDENTIFIER      shift and go to state 33

    calculate                      shift and go to state 58

state 36

    (32) compare_operator -> LB .
    (34) compare_operator -> LB . EQUAL

    MINUS           reduce using rule 32 (compare_operator -> LB .)
    LSB             reduce using rule 32 (compare_operator -> LB .)
    INT             reduce using rule 32 (compare_operator -> LB .)
    IDENTIFIER      reduce using rule 32 (compare_operator -> LB .)
    EQUAL           shift and go to state 59


state 37

    (33) compare_operator -> RB .
    (35) compare_operator -> RB . EQUAL

    MINUS           reduce using rule 33 (compare_operator -> RB .)
    LSB             reduce using rule 33 (compare_operator -> RB .)
    INT             reduce using rule 33 (compare_operator -> RB .)
    IDENTIFIER      reduce using rule 33 (compare_operator -> RB .)
    EQUAL           shift and go to state 60


state 38

    (36) compare_operator -> EQUAL . EQUAL

    EQUAL           shift and go to state 61


state 39

    (37) compare_operator -> NOTEQUAL . EQUAL

    EQUAL           shift and go to state 62


state 40

    (16) variable_declaration -> VAR IDENTIFIER . EQUAL expression

    EQUAL           shift and go to state 63


state 41

    (17) variable_value_change -> IDENTIFIER EQUAL . expression
    (12) expression -> . calculate
    (13) expression -> . string_calculate
    (14) expression -> . compare_expression
    (15) expression -> . function_call
    (41) calculate -> . calculate PLUS calculate
    (42) calculate -> . calculate MINUS calculate
    (43) calculate -> . calculate MUL calculate
    (44) calculate -> . calculate DIV calculate
    (45) calculate -> . MINUS calculate
    (46) calculate -> . LSB calculate RSB
    (47) calculate -> . INT
    (48) calculate -> . IDENTIFIER
    (38) string_calculate -> . string_calculate stringoperator STRING
    (39) string_calculate -> . STRING
    (30) compare_expression -> . compare_expression compare_operator calculate
    (31) compare_expression -> . calculate
    (18) function_call -> . IDENTIFIER LSB function_call_parameter RSB

    MINUS           shift and go to state 22
    LSB             shift and go to state 13
    INT             shift and go to state 23
    IDENTIFIER      shift and go to state 54
    STRING          shift and go to state 24

    expression                     shift and go to state 64
    calculate                      shift and go to state 19
    string_calculate               shift and go to state 20
    compare_expression             shift and go to state 15
    function_call                  shift and go to state 21

state 42

    (18) function_call -> IDENTIFIER LSB . function_call_parameter RSB
    (19) function_call_parameter -> . function_call_parameter COMMA calculate
    (20) function_call_parameter -> . calculate
    (21) function_call_parameter -> . empty
    (41) calculate -> . calculate PLUS calculate
    (42) calculate -> . calculate MINUS calculate
    (43) calculate -> . calculate MUL calculate
    (44) calculate -> . calculate DIV calculate
    (45) calculate -> . MINUS calculate
    (46) calculate -> . LSB calculate RSB
    (47) calculate -> . INT
    (48) calculate -> . IDENTIFIER
    (49) empty -> .
